# NSF

./: .gitignore  FINDINGS_2026-04-08.md  ORCHESTRATION.md  PLAN.md  README.md  requirements.txt
paper2_agent_tool_security/: LICENSE  README.md  pyproject.toml
paper2_agent_tool_security/data/: manual_search_results.json  server_catalog.json  servers_langchain.json  servers_mcp.json  servers_openai.json  servers_web3_native.json  taxonomy.json
paper2_agent_tool_security/disclosure/: disclosure_batch_results.json  disclosure_summary.csv  disclosure_template.md  generate_reports.py  generate_top25_reports.py  notification_template.md  send_disclosures.sh  send_disclosures_private.sh  tracking.md
paper2_agent_tool_security/dynamic_testing/: __init__.py  dynamic_test_results.json  llm_dynamic_harness.py  llm_dynamic_results.json  llm_dynamic_results_haiku.json  llm_dynamic_results_opus.json  llm_dynamic_results_sonnet.json  multi_model_dynamic_results.json  run_multi_model.py  test_harness.py
paper2_agent_tool_security/experiments/: clean_and_validate.py  cleaned_results.json  cross_model_tcpi_results.json  false_positive_analysis.json  false_positive_analysis.py  generate_publication_figures.py  pilot_cross_protocol.py  pilot_cross_protocol_results.json  pilot_mcp_only.py  pilot_results.json  precision_validation.py  precision_validation_results.json  recalibrated_risk_scores.json  scan_full_catalog.py  scan_real_servers.py  scan_results.json  scan_web3_servers.py  unified_web3_results.json  validate_findings.py  validation_results.json  web3_scan_results.json
(+428 files in other folders)
